<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutStyle"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/titleSettings"
        style="@style/ToolbarTextStyle"
        android:paddingStart="@dimen/standard_padding"
        android:layout_marginBottom="24dp"
        android:text="@string/settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSystemSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/string_height"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_display_regular"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="0dp"
        android:text="@string/system_theme"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"
        android:textSize="@dimen/small_text_size"
        android:theme="@style/Switch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeAppSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/string_height"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_display_regular"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="0dp"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"
        android:textSize="@dimen/small_text_size"
        android:theme="@style/Switch" />

    <Button
        android:id="@+id/shareButton"
        style="@style/ButtonStyle"
        android:text="@string/share_app"
        app:icon="@drawable/ic_share" />

    <Button
        android:id="@+id/helpButton"
        style="@style/ButtonStyle"
        android:text="@string/help"
        app:icon="@drawable/ic_support" />

    <Button
        android:id="@+id/agreementButton"
        style="@style/ButtonStyle"
        android:text="@string/agreement"
        app:icon="@drawable/arrow_forward" />

</LinearLayout>


