<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutStyle">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/arrow_back"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:stateListAnimator="@null"
            android:backgroundTint="?attr/colorSecondary"
            android:inset="0dp"
            android:layout_gravity="start|center_vertical"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconTint="?attr/colorOnSecondary"/>

        <TextView
            style="@style/ToolbarTextStyle"
            android:paddingStart="48dp"
            android:text="@string/settings"/>

    </FrameLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="@dimen/string_height"
        android:backgroundTint="?attr/colorSecondary"
        android:letterSpacing="0"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/small_text_size"
        app:fontFamily="@font/ys_display_regular"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/share"
        android:text="@string/share"
        app:icon="@drawable/share" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/help"
        android:text="@string/help"
        app:icon="@drawable/support" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/agreement"
        android:text="@string/agreement"
        app:icon="@drawable/arrow_forward" />

</LinearLayout>


