<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/firstLeftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04444" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/firstRightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95556" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/secondLeftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06667" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/secondRightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.93333" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/arrowBackButton"
            style="@style/ArrowBackStyle"
            android:layout_marginTop="@dimen/standard_padding"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconTint="?attr/colorOnSecondary"
            app:layout_constraintStart_toStartOf="@id/firstLeftBorder"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/trackCoverBig"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="42dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/secondRightBorder"
            app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/arrowBackButton"
            app:srcCompat="@drawable/cover_placeholder_big" />

        <TextView
            android:id="@+id/trackName"
            style="@style/TrackTextStyle"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@id/secondRightBorder"
            app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackCoverBig"
            tools:text="Track Name" />

        <TextView
            android:id="@+id/artistName"
            style="@style/TrackTextStyle"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/text_size_button"
            app:layout_constraintEnd_toEndOf="@id/secondRightBorder"
            app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="Artist Name" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="54dp"
            android:background="?attr/colorSecondary"
            android:src="@drawable/button_add_to_playlist"
            app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            tools:text="Add to playlist" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?attr/colorSecondary"
            android:src="@drawable/button_play"
            app:layout_constraintEnd_toStartOf="@id/firstRightBorder"
            app:layout_constraintStart_toStartOf="@id/firstLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="?attr/colorSecondary"
            android:src="@drawable/button_like"
            app:layout_constraintEnd_toStartOf="@id/secondRightBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            tools:text="Add to favourites" />

        <TextView
            android:id="@+id/currentTrackTime"
            style="@style/TrackTextStyle"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginTop="132dp"
            android:gravity="center"
            android:text="@string/current_track_time_placeholder"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_button"
            app:layout_constraintEnd_toStartOf="@id/dot"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/secondLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            tools:text="0:00" />

        <ImageView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/currentTrackTime"
            app:layout_constraintEnd_toStartOf="@id/totalTrackTime"
            app:layout_constraintStart_toEndOf="@id/currentTrackTime"
            app:layout_constraintTop_toTopOf="@id/currentTrackTime" />

        <TextView
            android:id="@+id/totalTrackTime"
            style="@style/TrackTextStyle"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginTop="132dp"
            android:gravity="center"
            android:text="@string/current_track_time_placeholder"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_button"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/secondRightBorder"
            app:layout_constraintStart_toEndOf="@id/dot"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            tools:text="0:00" />

        <ProgressBar
            android:id="@+id/trackProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminate="false"
            android:max="100"
            android:min="0"
            android:minWidth="280dp"
            android:minHeight="10dp"
            android:progress="0"
            android:progressBackgroundTint="@color/icon"
            android:progressTint="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/secondRightBorder"
            app:layout_constraintStart_toEndOf="@id/secondLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/currentTrackTime" />

        <TextView
            android:id="@+id/length"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/track_string_height"
            android:layout_marginTop="30dp"
            android:text="@string/length"
            android:textColor="@color/icon"
            app:layout_constraintBottom_toTopOf="@id/album"
            app:layout_constraintStart_toStartOf="@id/firstLeftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackProgressBar" />

        <TextView
            android:id="@+id/trackLength"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/track_string_height"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/album"
            app:layout_constraintEnd_toEndOf="@id/firstRightBorder"
            app:layout_constraintStart_toEndOf="@id/length"
            app:layout_constraintTop_toBottomOf="@id/trackProgressBar"
            tools:text="Track length" />

        <TextView
            android:id="@+id/album"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/track_string_height"
            android:text="@string/album"
            android:textColor="@color/icon"
            app:layout_constraintBottom_toTopOf="@id/year"
            app:layout_constraintStart_toStartOf="@id/firstLeftBorder" />

        <TextView
            android:id="@+id/trackAlbum"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/track_string_height"
            android:ellipsize="end"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/year"
            app:layout_constraintEnd_toEndOf="@id/firstRightBorder"
            app:layout_constraintStart_toEndOf="@id/album"
            tools:text="Track album" />

        <TextView
            android:id="@+id/year"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/track_string_height"
            android:text="@string/year"
            android:textColor="@color/icon"
            app:layout_constraintBottom_toTopOf="@id/genre"
            app:layout_constraintStart_toStartOf="@id/firstLeftBorder" />

        <TextView
            android:id="@+id/trackYear"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/track_string_height"
            android:ellipsize="end"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/genre"
            app:layout_constraintEnd_toEndOf="@id/firstRightBorder"
            app:layout_constraintStart_toEndOf="@id/year"
            tools:text="Track year" />

        <TextView
            android:id="@+id/genre"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/track_string_height"
            android:text="@string/genre"
            android:textColor="@color/icon"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintStart_toStartOf="@id/firstLeftBorder" />

        <TextView
            android:id="@+id/trackGenre"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/track_string_height"
            android:ellipsize="end"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintEnd_toEndOf="@id/firstRightBorder"
            app:layout_constraintStart_toEndOf="@id/genre"
            tools:text="Track genre" />

        <TextView
            android:id="@+id/country"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/track_string_height"
            android:layout_marginBottom="20dp"
            android:text="@string/country"
            android:textColor="@color/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/firstLeftBorder" />

        <TextView
            android:id="@+id/artistCountry"
            style="@style/TrackTextStyleSecondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/track_string_height"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/firstRightBorder"
            app:layout_constraintStart_toEndOf="@id/country"
            tools:text="Artist country" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>